bye bye warnings